MCR-3497 Refactoring and added JavaDocs